# ballistix

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  mkdocs.yml
.github/workflows/: deploy-mkdocs.yml
docs/: contributing.md  index.md
docs/architecture/: 03_context_and_scope.md  09-design-decisions.md
docs/architecture/adr/: 0001-core-abstraction.md  0002-time-stepping-strategy.md  index.md
docs/overrides/partials/: footer.html
docs/stylesheets/: extra.css
include/Ballistix/: Ballistix.hpp
tests/: CMakeLists.txt  InitializationTest.cpp
